--- a/static/listar_cuentas.css
+++ b/static/listar_cuentas.css
@@ -17,6 +17,11 @@ html, body{
     min-height: 60vh;
 }
 
+.contenido{
+    margin-bottom: 10px;
+    margin-top: 60px;
+}
+
 .container h2{
     text-align: center;
     font-size: 36px; 
