--- a/templates/listar_cuentas.html
+++ b/templates/listar_cuentas.html
@@ -24,26 +24,36 @@
             </thead>
             <tbody>
                 {% for cuenta in cuentas %}
-                
                 <tr>
-                    <td>{{cuenta.nombre}}</td>
-                    <td>{{cuenta.apellido}}</td>
-                    <td>{{cuenta.usuario}}</td>
-                    <td>{{cuenta.email}}</td>
-                    <td>{{cuenta.is_active}}</td>
-                    <td>{{cuenta.is_admin}}</td>
-                    <td>{{cuenta.is_veterinario}}</td>
-                    <td>{{cuenta.is_cuidador}}</td>
-                    <td>{{cuenta.is_criador}}</td>
-                    <td>{{cuenta.is_vendedor}}</td>
+                    <td>{{ cuenta.nombre }}</td>
+                    <td>{{ cuenta.apellido }}</td>
+                    <td>{{ cuenta.usuario }}</td>
+                    <td>{{ cuenta.email }}</td>
+                    <td class="{% if cuenta.is_active %}true{% else %}false{% endif %}">
+                        {{ cuenta.is_active }}
+                    </td>
+                    <td class="{% if cuenta.is_admin %}true{% else %}false{% endif %}">
+                        {{ cuenta.is_admin }}
+                    </td>
+                    <td class="{% if cuenta.is_veterinario %}true{% else %}false{% endif %}">
+                        {{ cuenta.is_veterinario }}
+                    </td>
+                    <td class="{% if cuenta.is_cuidador %}true{% else %}false{% endif %}">
+                        {{ cuenta.is_cuidador }}
+                    </td>
+                    <td class="{% if cuenta.is_criador %}true{% else %}false{% endif %}">
+                        {{ cuenta.is_criador }}
+                    </td>
+                    <td class="{% if cuenta.is_vendedor %}true{% else %}false{% endif %}">
+                        {{ cuenta.is_vendedor }}
+                    </td>
                     <td>
                         <a href="{% url 'cuentas' cuenta.id %}" class="btn-editar">Editar</a>
-                        
                     </td>
                 </tr>
-                
                 {% endfor %}
             </tbody>
+            
         </table>
     </div>
 </div>
