Se agrega pre-carga de los datos en editar

--- a/templates/editar_metodo_pago.html
+++ b/templates/editar_metodo_pago.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="contenido">
         <h2>Editar Método de Pago</h2>
-        <form method="post">
+        <form method="GET">
             {% csrf_token %}
             {{ form.as_p }}
 
