--- a/templates/listar_suministros.html
+++ b/templates/listar_suministros.html
@@ -42,7 +42,7 @@
                     <td>
                         <form action="{% url 'editar_suministro' suministro.id_suministro%}" method="POST">
                             {% csrf_token %}
-                            <button type="submit" class="btn-editar">Eliminar suministro</button>
+                            <button type="submit" class="btn-editar">Editar suministro</button>
                         </form>
                     </td>
                 </tr>
