--- a/templates/editar_ejemplar.html
+++ b/templates/editar_ejemplar.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="contenido">
         <h2>Editar Ejemplar</h2>
-        <form method="post" enctype="multipart/form-data">
+        <form method="GET" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
 
