--- a/templates/editar_empleado.html
+++ b/templates/editar_empleado.html
@@ -7,7 +7,7 @@
     <div class="contenido">
 
         <h2>Editar Empleado</h2>
-        <form method="post">
+        <form method="GET">
             {% csrf_token %}
             {{ form.as_p }}
             <div class="acciones">
