--- a/templates/editar_proveedor.html
+++ b/templates/editar_proveedor.html
@@ -7,7 +7,7 @@
     <div class="contenido">
 
         <h2>Editar Proveedor</h2>
-        <form method="post">
+        <form method="GET">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="hidden" name="id_proveedor" value="{{ form.instance.id_proveedor }}">
