--- a/templates/editar_tipo_empleado.html
+++ b/templates/editar_tipo_empleado.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="contenido">
         <h2>Editar Tipo de Empleado</h2>
-        <form method="post">
+        <form method="GET">
           {% csrf_token %}
           {{ form.as_p }}
           <div class="acciones">
