--- a/static/menu.css
+++ b/static/menu.css
@@ -222,3 +222,16 @@ nav {
     text-align: center;
     margin-right: 5px;
 }
+
+.link.active::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    border-radius: 5px;
+    transform: scaleX(1);
+    transition: all .5s ease;
+    bottom: 0;
+    left: 0;
+}
