--- a/static/buscador.css
+++ b/static/buscador.css
@@ -7,6 +7,7 @@
 html,body{
     background: url('images/backgroud_search.jpg') no-repeat center center;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .container {
