--- a/static/cartas_ejemplar.css
+++ b/static/cartas_ejemplar.css
@@ -7,8 +7,7 @@
 html,body{
     background: url('images/background_ejemplar_cards.jpg') no-repeat center center;
     background-size: cover;
-    height: 100%;
-    width: 100%;
+    background-attachment: fixed;
 }
 
 .container{
